# ts3wvwbot

./: Cargo.toml
src/: database.rs  gw2api.rs  main.rs
