[package]
name = "ts3wvwbot"
version = "0.1.0"
authors = ["MrGunflame <mrgunflame@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.2", features = ["full"] }
async-trait = "0.1.42"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "0.14.2", features = ["full"] }
hyper-tls = "0.5.0"
ts3 = "0.2.4"
sqlx = { version = "0.5.1", features = [ "runtime-tokio-rustls", "mysql" ] }
